--- a/src/components/SplashScreen.css
+++ b/src/components/SplashScreen.css
@@ -6,9 +6,19 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-  background-color: #f3f3f4;
+  background-color: var(--core-secondary-2);
 }
 
 .logo {
   margin-bottom: 35px;
+}
+
+.splash-screen-short {
+  background-color: var(--core-secondary-2);
+  width: 129px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
