feat: TopPeers service & component, fix: naming of number formatter util, fix: KeyStats title

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --core-secondary: #ffffff;
   --core-secondary-2: #f1f2f2;
   --core-secondary-5: #828282;
+  --core-secondary-4: #d8d9d9;
 }
 
 * {
