--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 :root {
   --core-secondary-1: #f9fafa;
   --core-primary-2: #4d4d4d;
+  --core-primary-5: #828282;
   --core-secondary: #ffffff;
   --core-secondary-2: #f1f2f2;
   --core-secondary-5: #828282;
   --core-secondary-3: #eaebeb;
+  --accent-primary: #aaabd1;
 }
 
 * {
@@ -15,4 +17,9 @@
 
 .app {
   display: flex;
+}
+
+.black {
+  color: #2b2b2b;
+  font-weight: 500;
 }
