--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  justify-content: center;
-  align-items: center;
+
   height: 100vh;
   padding: 0 32px;
   background-color: var(--core-secondary-1);
@@ -19,8 +18,22 @@ input {
   font-size: 32px;
   color: var(--core-primary-2);
   font-family: 'Merriweather-Regular';
+  margin-bottom: 5px;
 }
 
 input:focus-visible {
   outline: none;
+  border-bottom: 1px solid var(--accent-primary);
+}
+
+.search-wrapper {
+  position: relative;
+  margin-top: 48vh;
+}
+
+.test-a {
+  position: absolute;
+  right: 0;
+  top: 20px;
+  text-align: right;
 }
