--- a/src/components/SuggestionPanel.css
+++ b/src/components/SuggestionPanel.css
@@ -4,22 +4,10 @@
   padding: 10px 8px 20px 8px;
   border-radius: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+  position: absolute;
 }
 .market-name {
   border-bottom: 1px solid var(--core-secondary-3);
   padding: 0 8px;
   padding-bottom: 8px;
-}
-
-.stock-suggested {
-  width: 100%;
-  height: 40px;
-  padding: 0 8px;
-  display: flex;
-  align-items: center;
-}
-
-.stock-suggested:hover {
-  background-color: var(--core-secondary-2);
-  border-radius: 20px;
 }
