--- a/src/components/Fte/Fte.css
+++ b/src/components/Fte/Fte.css
@@ -4,6 +4,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
+  padding-top: 10px;
+  border-top: 1px solid #eaebeb;
+  width: 1200px;
 }
 
 td {
