--- a/src/components/SearchScreen/SearchScreen.css
+++ b/src/components/SearchScreen/SearchScreen.css
@@ -29,11 +29,5 @@ input:focus-visible {
 .search-wrapper {
   position: relative;
   margin-top: 48vh;
-}
-
-.test-a {
-  position: absolute;
-  right: 0;
-  top: 20px;
-  text-align: right;
+  width: 100%;
 }
