--- a/src/components/SuggestionPanel/SuggestionPanel.css
+++ b/src/components/SuggestionPanel/SuggestionPanel.css
@@ -5,6 +5,7 @@
   border-radius: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
   position: absolute;
+  z-index: 1;
 }
 .market-name {
   border-bottom: 1px solid var(--core-secondary-3);
@@ -12,7 +13,7 @@
   padding-bottom: 8px;
 }
 
-.no-result-label{
+.no-result-label {
   color: var(--core-primary-5);
   padding: 8px 8px 0px;
 }
