fix: reformat and style changes

--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -2,8 +2,8 @@
 
 .liveContainer {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  font-variant-numeric: tabular-nums;
 }
 
 .livePrice {
