--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -1,19 +1,25 @@
 .dashboard {
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 'mainSection sidebarRight';
 }
 
 .main-section {
+  grid-area: mainSection;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
   background-color: var(--core-secondary-1);
 }
 
 .right-sidebar {
-  background-color: var(--core-secondary-2);
+  grid-area: sidebarRight;
   display: flex;
   flex-direction: column;
-  width: 520px;
+  align-items: center;
+  background-color: var(--core-secondary-2);
 }
