fix: minor fixes to dashboard, live price and dashboard styling

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -4,6 +4,7 @@
   grid-template-columns: 3fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 'mainSection sidebarRight';
+  background-color: var(--core-secondary-1);
 }
 
 .main-section {
