--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -4,6 +4,10 @@
   display: flex;
   align-items: center;
   font-variant-numeric: tabular-nums;
+  width: 265px;
+  margin-top: 4vh;
+  margin-bottom: 30px;
+  border-bottom: 1px solid var(--core-secondary-3);
 }
 
 .livePrice {
