--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-.liveContainer {
+.live-container {
   display: flex;
   align-items: center;
   font-variant-numeric: tabular-nums;
@@ -10,23 +10,34 @@
   border-bottom: 1px solid var(--core-secondary-3);
 }
 
-.livePrice {
+.live-price {
   font-size: 32px;
   font-family: Roboto;
   color: var(--core-primary-1);
   padding-right: 10px;
 }
 
-.priceChangePositive {
+.price-change-positive {
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
   color: #00ff00;
 }
 
-.priceChangeNegative {
+.price-change-negative {
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
   color: #ff0000;
+}
+
+.live-price-error {
+  display: flex;
+  justify-content: center;
+  width: 265px;
+  margin-top: 4vh;
+  margin-bottom: 30px;
+  border-bottom: 1px solid var(--core-secondary-3);
+  font-family: Roboto;
+  font-size: 1vw;
 }
