--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -1,7 +1,8 @@
 .dashboard {
   width: 100%;
+  height: 100vh;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 'mainSection sidebarRight';
   background-color: var(--core-secondary-1);
@@ -9,16 +10,18 @@
 
 .main-section {
   grid-area: mainSection;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0px 32px;
+  padding: 0px 35px;
 }
 
 .right-sidebar {
   grid-area: sidebarRight;
+  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
