--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -19,7 +19,7 @@
 }
 
 .stats-section {
-  width: 350px;
+  width: 100%;
 }
 
 /* .stats-section:first-of-type {
@@ -27,7 +27,7 @@
 } */
 
 .stats-section:last-of-type {
-  margin-right: 32px;
+  margin-right: 12px;
 }
 
 .stats-section:nth-of-type(2) {
