--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -1,6 +1,6 @@
 .peers-wrapper {
   width: 95%;
-  padding: 20px 25px 0 25px;
+  padding: 25px 30px 0 30px;
 }
 
 .peers-title {
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding-top: 20px;
 }
 
 .peer {
@@ -25,7 +25,7 @@
   font-weight: 500;
   font-size: 11px;
   color: #6b6b6b;
-  padding: 4px;
+  padding: 3px 4px 3px 4px;
   margin: 2px;
   border: 2px solid var(--core-secondary-4);
   border-radius: 43px;
