--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -1,7 +1,6 @@
 .summary-container {
   width: 95%;
-  padding: 0 30px 40px 30px;
-  border-bottom: 1px solid var(--core-secondary-4);
+  padding: 0 30px 0px 30px;
 }
 
 .summary-title {
@@ -28,4 +27,6 @@
 .company-summary {
   font-size: 12px;
   font-family: 'Roboto', sans-serif;
+  padding-bottom: 40px;
+  border-bottom: 1px solid var(--core-secondary-4);
 }
