--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 1fr 351px;
   grid-template-rows: auto;
   grid-template-areas: 'mainSection sidebarRight';
   background-color: var(--core-secondary-1);
@@ -10,11 +10,11 @@
 
 .main-section {
   grid-area: mainSection;
-  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: start;
   padding: 0px 35px;
 }
 
@@ -30,7 +30,8 @@
 
 .search-live {
   display: grid;
-  grid-template-columns: 5fr 1fr;
+  grid-template-columns: 5fr 265px;
   grid-template-rows: auto;
   width: 100%;
+  margin-bottom: 31px;
 }
