--- a/src/components/SplashScreen/SplashScreen.css
+++ b/src/components/SplashScreen/SplashScreen.css
@@ -14,9 +14,9 @@
 }
 
 .splash-screen-short {
-  padding-top: 4vh;
+  padding-top: 37px;
   background-color: var(--core-secondary-2);
-  min-width: 180px;
+  min-width: 129px;
   height: 100vh;
   display: flex;
   flex-direction: column;
