--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -1,32 +1,45 @@
 .summary-container {
-  width: 95%;
-  padding: 0 30px 0px 30px;
+  width: 317px;
 }
 
 .summary-title {
   font-family: 'Merriweather', serif;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
-  padding-bottom: 10px;
+  padding-bottom: 9px;
+  color: var(--core-primary-2);
+  margin: 8px 16px 0px 16px;
 }
 
 .company-name {
   font-size: 13px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
-  padding-bottom: 10px;
+  padding-bottom: 2px;
+  color: var(--core-primary-2);
+  margin: 0px 16px 0px 16px;
 }
 
 .company-link {
   display: inline-block;
   font-size: 11px;
   font-family: 'Roboto', sans-serif;
-  padding-bottom: 10px;
+  font-style: italic;
+  color: var(--accent-primary);
+  padding-bottom: 8px;
+  margin: 0px 16px 0px 16px;
 }
 
 .company-summary {
   font-size: 12px;
   font-family: 'Roboto', sans-serif;
   padding-bottom: 40px;
+  line-height: 1.67;
+  letter-spacing: 0.09px;
+  color: var(--core-primary-2);
+  margin: 0px 16px 0px 16px;
+}
+
+.summary-line {
   border-bottom: 1px solid var(--core-secondary-4);
 }
