--- a/src/components/Fte/Fte.css
+++ b/src/components/Fte/Fte.css
@@ -25,7 +25,7 @@ td:last-child {
 
 .positiveChange {
   font-weight: 500;
-  color: #00ee00;
+  color: #00d800;
   border-right: 1px solid var(--core-secondary-3);
 }
 
