--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -21,7 +21,7 @@
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
-  color: #00ee00;
+  color: #00d800;
   padding-bottom: 4px;
 }
 
