fix: added styling changes and some graph fixes

--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -3,12 +3,15 @@
 .recharts-wrapper .recharts-cartesian-grid-horizontal line:last-child {
   stroke-opacity: 0;
 }
+.recharts-wrapper .recharts-cartesian-grid-vertical line:last-child {
+  stroke-opacity: 0;
+}
 
 .chart {
   display: flex;
   width: 99%;
   min-width: 980px;
-  height: 55%;
+  height: 50%;
 }
 
 .loading-fail {
