--- a/src/components/SearchScreen/SearchScreen.css
+++ b/src/components/SearchScreen/SearchScreen.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-
 .search {
   display: flex;
   flex-direction: column;
@@ -20,6 +18,7 @@ input {
   font-size: 32px;
   color: #2b2b2b;
   font-family: 'Merriweather';
+  font-weight: 700;
 }
 
 input:focus-visible {
