--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -5,8 +5,8 @@
   align-items: flex-end;
   justify-content: end;
   width: 265px;
-  padding-bottom: 7px;
-  margin-top: 43px;
+  padding-bottom: 14px;
+  padding-top: 40px;
   border-bottom: 2px solid var(--core-secondary-3);
 }
 
