--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   --core-secondary-4: #d8d9d9;
   --core-secondary-5: #828282;
   --accent-primary: #aaabd1;
-
 }
 
 * {
@@ -24,4 +23,8 @@
 .black {
   color: #2b2b2b;
   font-weight: 500;
+}
+
+a {
+  text-decoration: none;
 }
