--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -19,8 +19,10 @@
   justify-content: center;
   align-items: center;
   font-family: Roboto;
-  font-size: 3vw;
-  width: 95%;
-  height: 55%;
+  font-size: 1vw;
+  width: 100%;
+  min-width: 980px;
+  height: 50%;
+  color: var(--core-primary-2);
   border: 2px solid var(--core-secondary-3);
 }
