--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -4,6 +4,19 @@
   padding: 30px 0px 0px 5px;
 }
 
+.key-stats-error {
+  width: 100%;
+  height: 36%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Merriweather', serif;
+  font-size: 18px;
+  color: var(--core-primary-2);
+  border: solid 2px var(--core-secondary-3);
+  border-bottom: solid 1px var(--core-secondary-3);
+}
+
 .stats-container {
   display: flex;
   flex-direction: row;
