--- a/src/components/Indexes/indexloading.css
+++ b/src/components/Indexes/indexloading.css
@@ -1,4 +1,4 @@
-.fte-loading {
+.index-loading {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +32,7 @@
   }
 
   50% {
-    transform: translate(0px, 15px);
+    transform: translate(0px, 13px);
   }
 
   100% {
