--- a/src/components/News/news.css
+++ b/src/components/News/news.css
@@ -14,7 +14,7 @@
   margin-top: 44px;
   margin-bottom: 16px;
   font-family: 'Merriweather';
-  font-size: 0.7vw;
+  font-size: 16px;
   color: var(--core-primary-2);
 }
 
