--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -12,7 +12,7 @@
   margin-top: 8px;
   margin-bottom: 9px;
   font-family: 'Merriweather';
-  font-size: 0.7vw;
+  font-size: 16px;
   color: var(--core-primary-2);
 }
 
