--- a/src/components/StockOption/StockOption.css
+++ b/src/components/StockOption/StockOption.css
@@ -7,7 +7,7 @@
   color: var(--core-primary-5);
 }
 
-.stock-suggested:hover {
+.hovered {
   background-color: var(--core-secondary-2);
   border-radius: 20px;
   color: #000;
