feat: added error handling and placeholders for all the components

--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -21,7 +21,7 @@
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
-  color: #00d800;
+  color: #01c38d;
   padding-bottom: 3px;
 }
 
@@ -29,7 +29,8 @@
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
-  color: #ff3542;
+  color: #ff274b;
+  padding-bottom: 3px;
 }
 
 .live-price-error {
@@ -41,6 +42,10 @@
   padding-bottom: 14px;
   color: var(--core-primary-2);
   border-bottom: 2px solid var(--core-secondary-3);
-  font-family: Roboto;
-  font-size: 1vw;
+  font-family: 'Merriweather';
+  font-size: 18px;
+}
+
+.arrow {
+  float: left;
 }
