--- a/src/components/News/news.css
+++ b/src/components/News/news.css
@@ -10,7 +10,7 @@
   height: 300px;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--core-secondary-4);
+  border-bottom: 1px solid var(--core-secondary-4);
   margin-top: 44px;
   margin-bottom: 16px;
   font-family: 'Merriweather';
