--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -9,7 +9,7 @@
 
 .chart {
   display: flex;
-  width: 99%;
+  width: 98%;
   min-width: 980px;
   height: 50%;
 }
@@ -24,5 +24,5 @@
   font-family: 'Merriweather', serif;
   font-size: 18px;
   color: var(--core-primary-2);
-  border: 2px solid var(--core-secondary-3);
+  border-bottom: 2px solid var(--core-secondary-3);
 }
