--- a/src/components/Indexes/index.css
+++ b/src/components/Indexes/index.css
@@ -6,13 +6,14 @@
   align-items: center;
   border-top: 1px solid var(--core-secondary-3);
   width: 100%;
-  padding: 7px 0px;
+  padding-top: 8px;
+  padding-bottom: 16px;
 }
 
 td {
   font-family: 'Roboto';
   font-size: 12px;
-  padding: 10px 20px;
+  padding: 2px 20px;
 }
 
 td:last-child {
@@ -25,14 +26,16 @@ td:last-child {
 
 .positiveChange {
   font-weight: 500;
-  color: #00d800;
+  color: #01c38d;
   border-right: 1px solid var(--core-secondary-3);
+  display: flex;
 }
 
 .negativeChange {
   font-weight: 500;
-  color: #f23441;
+  color: #ff274b;
   border-right: 1px solid var(--core-secondary-3);
+  display: flex;
 }
 
 .index-name {
@@ -50,4 +53,12 @@ td:last-child {
   font-size: 16px;
   color: var(--core-primary-2);
   border-top: 1px solid var(--core-secondary-3);
+}
+
+.index-arrow {
+  float: left;
+}
+
+.index-change {
+  padding-top: 4px;
 }
