--- a/src/components/LivePrice/loading.css
+++ b/src/components/LivePrice/loading.css
@@ -1,11 +1,9 @@
 .live-loading {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-variant-numeric: tabular-nums;
+  justify-content: end;
   width: 265px;
-  margin-bottom: 30px;
-  border-bottom: 1px solid var(--core-secondary-3);
+  padding-top: 40px;
+  border-bottom: 2px solid var(--core-secondary-3);
 }
 
 .live-one {
