--- a/src/components/SplashScreen/SplashScreen.css
+++ b/src/components/SplashScreen/SplashScreen.css
@@ -10,9 +10,10 @@
 }
 
 .splash-screen-short {
+  grid-area: leftSidebar;
   padding-top: 37px;
   background-color: var(--core-secondary-2);
-  min-width: 129px;
+  width: 129px;
   height: 100vh;
   display: flex;
   flex-direction: column;
