--- a/src/components/Indexes/index.css
+++ b/src/components/Indexes/index.css
@@ -62,3 +62,9 @@ td:last-child {
 .index-change {
   padding-top: 4px;
 }
+
+@media only screen and (max-width: 1366px) {
+  .index {
+    border: none;
+  }
+}
