--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -57,3 +57,23 @@
 .summary-line {
   border-bottom: 1px solid var(--core-secondary-4);
 }
+
+@media only screen and (max-width: 1366px) {
+  .summary-line {
+    display: none;
+  }
+
+  .summary-title {
+    margin-top: 0px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .summary-container {
+    margin-right: 30px;
+  }
+
+  .company-summary {
+    padding-bottom: 25px;
+  }
+}
