--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -51,3 +51,33 @@
   font-size: 16px;
   color: var(--core-primary-2);
 }
+
+@media only screen and (max-width: 1366px) {
+  .peers-wrapper {
+    margin-right: 30px;
+  }
+  .peers-title {
+    margin-top: 0px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .peers-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .peers-title {
+    margin-left: 0;
+    padding-top: 20px;
+  }
+
+  .peers-wrapper {
+    margin-left: 30px;
+    padding-left: 15px;
+    width: 100%;
+    border-top: 1px solid var(--core-secondary-4);
+  }
+}
