--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -54,3 +54,13 @@
   color: #7f7f7f;
   font-size: 12px;
 }
+
+@media only screen and (max-width: 834px) {
+  .stats-container {
+    flex-direction: column;
+  }
+
+  .stats-section:nth-of-type(2) {
+    margin: 0px;
+  }
+}
