--- a/src/components/SearchScreen/SearchScreen.css
+++ b/src/components/SearchScreen/SearchScreen.css
@@ -30,3 +30,10 @@ input:focus-visible {
   margin-top: 48vh;
   width: 100%;
 }
+
+@media only screen and (max-width: 834px) {
+  input {
+    font-size: 16px;
+    padding-left: 8px;
+  }
+}
