--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -58,6 +58,11 @@
   }
   .peers-title {
     margin-top: 0px;
+    margin-left: 0px;
+  }
+
+  .peers-container {
+    justify-content: start;
   }
 }
 
@@ -71,13 +76,34 @@
 
   .peers-title {
     margin-left: 0;
-    padding-top: 20px;
+    padding-top: 15px;
   }
 
   .peers-wrapper {
     margin-left: 30px;
+    margin-top: 30px;
     padding-left: 15px;
     width: 100%;
     border-top: 1px solid var(--core-secondary-4);
+  }
+}
+
+@media only screen and (max-width: 834px) {
+  .peers-wrapper {
+    width: 410px;
+    border: none;
+    margin: 0;
+    margin-top: 10px;
+  }
+
+  .peers-container {
+    margin-right: 32px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .peers-title {
+    padding-top: 0px;
   }
 }
