fix: fixes graph responsiveness and added scrolling

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -120,4 +120,8 @@
   .search-live {
     grid-template-columns: 1fr 165px;
   }
+
+  .dashboard {
+    grid-template-rows: 80px 1.8fr 1fr 57px;
+  }
 }
