--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -9,15 +9,16 @@
 
 .chart {
   height: 60%;
-  width: 100%;
-  overflow-x: auto;
+  width: 99%;
+  overflow-x: hidden;
+  overflow-y: hidden;
   user-select: none;
 }
 
 .chart-inner {
   height: 98%;
   width: 98%;
-  min-width: 1100px;
+  min-width: 1300px;
 }
 
 .loading-fail {
@@ -34,7 +35,7 @@
 
 @media only screen and (max-width: 1366px) {
   .chart {
-    width: 1000px;
+    width: 970px;
   }
 }
 
