--- a/src/components/News/news.css
+++ b/src/components/News/news.css
@@ -66,6 +66,11 @@
   .news-wrapper {
     margin-left: 30px;
   }
+
+  .news-error {
+    margin: 0px;
+    border: none;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
