--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -76,6 +76,11 @@
   .company-summary {
     margin-right: 0px;
   }
+
+  .summary-error {
+    margin: 0px;
+    border: none;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
