--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -25,7 +25,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
   justify-content: start;
   padding: 0px 35px;
   background-color: var(--core-secondary-1);
@@ -50,7 +50,6 @@
 .search-live {
   display: flex;
   width: 100%;
-  margin-top: 43px;
 }
 
 @media only screen and (max-width: 1366px) {
