--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -10,6 +10,8 @@
 .chart {
   display: flex;
   flex-direction: row;
+  width: 99%;
+  height: 50%;
   padding-top: 31px;
   overflow-x: hidden;
   overflow-y: hidden;
