--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -43,6 +43,7 @@
   color: var(--accent-primary);
   padding-bottom: 8px;
   margin: 0px 16px 0px 16px;
+  text-decoration: underline;
 }
 
 .company-summary {
