--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -29,6 +29,17 @@
   justify-content: start;
   padding: 0px 35px;
   background-color: var(--core-secondary-1);
+  animation: slide-up 0.75s forwards;
+  -webkit-animation: slide-up 0.75s forwards;
+}
+
+@keyframes slide-up {
+  0% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
 
 .right-sidebar {
@@ -38,8 +49,18 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--core-secondary-2);
+  animation: slide-in-from-right 0.75s forwards;
+  -webkit-animation: slide-in-from-right 0.75s forwards;
 }
 
+@keyframes slide-in-from-right {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
 .footer {
   grid-area: footer;
   width: 100%;
