--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -72,4 +72,8 @@
   .stats-section:nth-of-type(2) {
     margin: 0px;
   }
+
+  .stats-row:last-of-type {
+    border-bottom: 1px solid var(--core-secondary-3);
+  }
 }
