fix: mobile view last stats line

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -7,6 +7,7 @@
   grid-template-areas:
     'left-sidebar main-section right-sidebar'
     'left-sidebar footer right-sidebar';
+  background-color: var(--core-secondary-1);
 }
 
 .left-sidebar {
